<resources>
    <string name="app_name">To-Do Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Passwords must be matches and at least 6 characters</string>
    <string name="error_invalid_username">Illegal characters</string>
    <string name="error_field_required">Field required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_phone">Phone</string>
    <string name="welcome">Please enter youre details to sign-up:</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_create_team">CreateTeam</string>
    <string name="prompt_team">team name</string>
    <string name="createTeam">Create your team and invite members</string>
    <string name="create">create</string>
    <string name="prompt_Confirm">Password confirm</string>
    <string name="inviteMembers">Type each email and phone and click add:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="WaitingTasks">Waiting Tasks:</string>
    <string name="wNo">Wno</string>
    <string name="AllTasks">AllTasks</string>
    <string name="category">Category:</string>
    <string name="priority">Priority:</string>
    <string name="location">Location:</string>
    <string name="dueDate">Due date:</string>
    <string name="Type">Type email and phone and click add</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
