<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.almog.CreateAndInvite"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/createTeam"
        android:id="@+id/TextWelcome" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">

    </android.support.design.widget.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_team"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/TextWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/inviteMembers"
            android:id="@+id/tasksNo"
            android:layout_below="@+id/team" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="Email"
            android:layout_below="@+id/tasksNo"
            android:layout_marginBottom="3dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add"
        android:background="@color/colorPrimary"
        android:id="@+id/addBtn"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAdd"
        android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleviewMembers"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/addBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:background="@color/colorPrimary"
            android:id="@+id/btnNext"
            android:onClick="onClickNext"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>