<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shenkar.shenkartasks.ReportTask">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Report task"
        android:id="@+id/Report"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:layout_below="@id/Report"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Cleaning"
        android:layout_marginBottom="10dp"
        android:id="@+id/reportCat"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/priority"
        android:layout_below="@+id/reportCat"
        android:id="@+id/textView4"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="urgent"
        android:id="@+id/reportPrio"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:layout_below="@+id/reportPrio"
        android:id="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="map"
        android:id="@+id/reportLoc"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:id="@+id/dueDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dueDate"
        android:layout_below="@id/reportLoc"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.10.16"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/dueDate"
        android:layout_centerHorizontal="true"
        android:id="@+id/reportDate" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGReport"
        android:layout_below="@+id/reportDate"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="accept"
            android:id="@+id/checkboxAcc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="reject"
            android:id="@+id/checkboxRej"
            android:checked="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onCheckboxClicked"/>

    </RadioGroup>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_above="@+id/btnSend"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="Add photo"
        android:id="@+id/btnAddPhoto"
        android:layout_below="@id/radioGReport"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="Save &amp; Send"
        android:id="@+id/btnSend"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendTask" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="in progress"
        android:id="@+id/checkBoxInProgress"
        android:checked="false"
        android:onClick="onCheckboxClickedSec"
        android:layout_alignTop="@+id/radioGReport"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="done"
        android:id="@+id/checkBoxDone"
        android:layout_below="@+id/checkBoxInProgress"
        android:layout_alignLeft="@+id/checkBoxInProgress"
        android:layout_alignStart="@+id/checkBoxInProgress"
        android:checked="false"
        android:onClick="onCheckboxClickedSec"/>
</RelativeLayout>
